[package]
name = "piano_roll"
version = "0.1.0"
authors = ["easynam <easynam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.1.1"
iced_native = "0.2.2"
iced_wgpu = "0.2.3"
num-rational = "0.3.2"
num-traits = "0.2.14"
num-bigint = "0.3.1"
cpal = "0.13.1"
crossbeam = "0.8.0"
redoxsynth = { path = "crates/redoxsynth" }

[workspace]
members = ["crates/*"]