[package]
name = "piano_roll"
version = "0.1.0"
authors = ["easynam <easynam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

iced = "0.2.0"
iced_graphics = { version = "0.1.0", features = ["canvas"] }
iced_native = "0.3.0"
iced_wgpu = "0.3.0"
num-rational = "0.3.2"
num-traits = "0.2.14"
num-bigint = "0.3.1"
cpal = "0.13.1"
crossbeam = "0.8.0"
redoxsynth = { path = "crates/redoxsynth" }
slotmap = "1.0.2"

[workspace]
members = ["crates/*"]